@@ -1,4 +1,4 @@
 /**
- * TODO: Javadoc this properly!
+ * Contains the classes needed to obtain basic radar information.
  */
 package org.lazywizard.radar;
